[package]
name = "rosu-pp-java"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ['cdylib']

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1

[dependencies]
jni = "0.21.1"
rosu-pp = "=1.0.0"
osu-db = {version = "0.3.0", default-features = false}
once_cell = "1.13.0"
bytes = "1.1.0"
bitflags = "2.6.0"
error-chain = "0.12.4"
